ml/jupyter/jupyterlab-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jupyterlab
spec:
  selector:
    app: jupyterlab
  ports:
    - name: web
      protocol: TCP
      port: 8888
      targetPort: 8888
